--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,19 @@
 }
 
 #canvas{
-    background-color:#202020;
+    background-color:#669DB3FF;
 }
 
 #score{
     position: absolute;
     padding: .5em;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: burlywood;
+    background-color: #F0F6F7FF;
     border-radius: .5em;
+    border: 2px solid #669DB3FF;
     margin: .5em;
-    color: #151515;
+    color: #FF4F58FF;
+    filter: drop-shadow(0 0 3rem rgb(90, 90, 90));
 }
 
 #full-screen{
@@ -26,26 +28,28 @@
     left: 0px;
     display: grid;
     grid-template-columns: 25% 50% 25%;
-    grid-template-rows: 30% 40% 30%;
+    grid-template-rows: 32% 36% 32%;
     align-content: center;
     justify-content: center;
 }
 
 #container{
+    border: 1px solid #669DB3FF;
     grid-column: 2;
     grid-row: 2;
     align-self: fill;
     justify-self: fill;
-    background-color: slateblue;
+    background-color: #F0F6F7FF;
 
    border-radius: 3rem;
+   filter: drop-shadow(0 0 3rem rgb(90, 90, 90));
 
    display: grid;
    grid-template-rows: 40% 20% 40%;
    justify-content: center;
 }
 h1 ,p{
-    color: salmon;
+    color: #FF4F58FF;
     align-self: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
@@ -58,15 +62,16 @@ p{
     font-size: 3rem;
 }
 button{
+    background-color: #669DB3FF;
     border-radius: .5rem;
     padding: .3em;
-    color: salmon;
+    color: #F0F6F7FF;
     align-self: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 3rem;
     justify-self: center;
 }
-@media (max-height: 650px) {
+@media (max-height: 800px) {
     h1{
         font-size: 3rem;
     }
@@ -76,5 +81,24 @@ button{
     button{
         font-size: 2rem;
     }
+    #score{
+        font-size: 1.25em;
+    }
     
+}
+
+@media (max-height: 500px) {
+    h1{
+        font-size: 2rem;
+    }
+    p{
+        font-size: 1.5rem;
+    }
+    button{
+        padding:0;
+        font-size: 1.5rem;
+    }
+    #score{
+        font-size: 1em;
+    }
 }
