--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,23 @@
 #canvas{
     background-color:#669DB3FF;
 }
-
+#powerups{
+    position: absolute;
+    padding: .5em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #F0F6F7FF;
+    border-radius: .5em;
+    border: 2px solid #669DB3FF;
+    margin: .5em;
+    color: #FF4F58FF;
+    top:0;
+    right: 0;
+    filter: drop-shadow(0 0 3rem rgb(90, 90, 90));
+}
+#powerups > img{
+    height: 70px;
+    width: 70px;
+}
 #score{
     position: absolute;
     padding: .5em;
